# orocos_franka_panda

./: CMakeLists.txt  LICENSE  README.md  package.xml
scripts/: deploy_panda.lua  deploy_panda_velocity.lua  velocity_generator.lua
src/: CMakeLists.txt  franka_panda_driver-component.cpp  franka_panda_driver-component.hpp
