<package format="2">
  <name>orocos_franka_panda</name>
  <version>1.0.0</version>
  <description>An Orocos component wrapper of libfranka for Panda</description>
  <maintainer email="santiago.iregui@kuleuven.be">Santiago Iregui</maintainer>

  <license>Unknown</license>

  <!-- <url type="bugtracker"></url> -->

  <author>Santiago Iregui</author>

  <build_depend>orogen</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rtt</depend>
  <depend>rtt_roscomm</depend>
  <depend>rtt_motion_control_msgs</depend>
  <depend>rtt_sensor_msgs</depend>
  <depend>rtt_trajectory_msgs</depend>


  <export>

  </export>
</package>
